fix: align title border to middle

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_node.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_node.scss
@@ -19,7 +19,7 @@
     border-bottom: solid hb-calculate-rems(4px) hb-colorful-variation(secondary);
     content: '';
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     width: hb-calculate-rems(55px);
     margin-right: hb-calculate-rems(10px);
     }
